# fastapi_vector_db

./: .env  .gitignore  Dockerfile  README.md  demo_script.md  docker-compose.yml  docker_build_run.sh  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  scripts.py
app/api/: dependencies.py  deps.py
app/api/routers/: chunks.py  documents.py  libraries.py  search.py
app/api/schemas/: chunk.py  document.py  library.py
app/core/: config.py  embeddings.py  persistence.py
app/domain/: models.py
app/indexing/: __init__.py  ball_tree.py  brute.py  linear_search.py
app/repos/: in_memory.py
app/services/: chunk.py  document.py  errors.py  exceptions.py  library.py  search.py
docs/: INDEXING.md
scripts/: benchmark.py  generate_requirements.py
tests/: test_api.py  test_ball_tree.py  test_brute_force.py  test_library_service.py  test_linear_search.py  test_models.py  test_repo.py  test_search.py
