[tool.poetry]
name = "fastapi_vector_db"
version = "0.1.0"
description = "FastAPI Vector Database"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111"
pydantic = ">=2,<3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.5"
ruff = "^0.1.3"
mypy = "^1.6.1"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]
